# Mandelbrot

./: CMakeLists.txt  README.md
src/: image_utils.cpp  image_utils.h  main.cpp  mandelbrot.cu  mandelbrot.cuh  video_utils.cpp  video_utils.h
